--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/bundle/command-t"]
 	path = .vim/bundle/command-t
 	url = https://github.com/wincent/Command-T
+[submodule ".vim/bundle/atea.vim"]
+	path = .vim/bundle/atea.vim
+	url = https://github.com/pkamenarsky/atea.vim
