--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule ".vim/bundle/atea.vim"]
 	path = .vim/bundle/atea.vim
 	url = https://github.com/pkamenarsky/atea.vim
+[submodule ".pentadactyl/plugins"]
+	path = .pentadactyl/plugins
+	url = https://github.com/pkamenarsky/fbookmark
