--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
+[submodule ".vim/bundle/bgcmd"]
+	path = .vim/bundle/bgcmd
+	url = git@github.com:pkamenarsky/vim-plugin-bgcmd.git
