--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,9 @@
 [submodule ".vim/bundle/bgcmd"]
 	path = .vim/bundle/bgcmd
 	url = git@github.com:pkamenarsky/vim-plugin-bgcmd.git
+[submodule ".vim/bundle/haskellmode-vim"]
+	path = .vim/bundle/haskellmode-vim
+	url = https://github.com/lukerandall/haskellmode-vim.git
+[submodule ".vim/bundle/vim-haskellConceal"]
+	path = .vim/bundle/vim-haskellConceal
+	url = https://github.com/Twinside/vim-haskellConceal.git
