--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule ".vim/bundle/ctrlp.vim"]
 	path = .vim/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule ".vim/bundle/html-template-syntax"]
+	path = .vim/bundle/html-template-syntax
+	url = https://github.com/pbrisbin/html-template-syntax.git
