--- a/.gitmodules
+++ b/.gitmodules
@@ -64,9 +64,6 @@
 [submodule ".vim/bundle/vim-latex-live-preview"]
 	path = .vim/bundle/vim-latex-live-preview
 	url = https://github.com/xuhdev/vim-latex-live-preview.git
-[submodule "/Users/phil/.vim/bundle/vimproc.vim"]
-	path = /Users/phil/.vim/bundle/vimproc.vim
-	url = https://github.com/Shougo/vimproc.vim.git
 [submodule ".vim/bundle/ghcmod-vim"]
 	path = .vim/bundle/ghcmod-vim
 	url = https://github.com/eagletmt/ghcmod-vim.git
@@ -85,3 +82,6 @@
 [submodule ".vim/bundle/vim-hdevtools"]
 	path = .vim/bundle/vim-hdevtools
 	url = https://github.com/bitc/vim-hdevtools.git
+[submodule ".vim/bundle/vimproc.vim"]
+	path = .vim/bundle/vimproc.vim
+	url = https://github.com/Shougo/vimproc.vim.git
