--- a/.gitmodules
+++ b/.gitmodules
@@ -34,9 +34,6 @@
 [submodule ".vim/bundle/bgcmd"]
 	path = .vim/bundle/bgcmd
 	url = git@github.com:pkamenarsky/vim-plugin-bgcmd.git
-[submodule ".vim/bundle/vim-haskellConceal"]
-	path = .vim/bundle/vim-haskellConceal
-	url = https://github.com/Twinside/vim-haskellConceal.git
 [submodule ".vim/bundle/vim-hoogle"]
 	path = .vim/bundle/vim-hoogle
 	url = https://github.com/Twinside/vim-hoogle.git
@@ -85,3 +82,6 @@
 [submodule ".vim/bundle/vimproc.vim"]
 	path = .vim/bundle/vimproc.vim
 	url = https://github.com/Shougo/vimproc.vim.git
+[submodule ".vim/bundle/vim2hs"]
+	path = .vim/bundle/vim2hs
+	url = https://github.com/dag/vim2hs.git
