--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule ".vim/bundle/vim-leiningen"]
 	path = .vim/bundle/vim-leiningen
 	url = git://github.com/tpope/vim-leiningen.git
+[submodule "/Users/phil/.vim/bundle/vim-easymotion"]
+	path = /Users/phil/.vim/bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion
