--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -1,5 +1,6 @@
 ext html = open "$@" /Applications/Firefox.app
 ext js = vim "$@"
+ext json = vim "$@"
 ext hs = vim "$@"
 ext py = vim "$@"
 mime .*text.* = vim "$@"
