--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,6 @@
 [difftool]
   prompt = false
 [difftool "icdiff"]
-  cmd = /usr/bin/icdiff --line-numbers $LOCAL $REMOTE
+  cmd = icdiff --line-numbers $LOCAL $REMOTE
 [pager]
   difftool = true
