--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -1,4 +1,4 @@
-ext html = open "$@" /Applications/Firefox.app
+ext html = open "$@" /Applications/Google\ Chrome.app
 ext js = vim "$@"
 ext json = vim "$@"
 ext hs = vim "$@"
